[gd_scene load_steps=2 format=3 uid="uid://bsnxxpuas0dpb"]

[ext_resource type="Script" uid="uid://oktr87by7fnn" path="res://code/cameras.gd" id="1_crc1l"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_crc1l")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CameraFeed" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BttnsContainer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Cam1" type="Button" parent="CanvasLayer/BttnsContainer"]
layout_mode = 0
offset_left = -95.0
offset_top = 2.0
offset_right = -40.0
offset_bottom = 33.0
text = "gaga"

[node name="Cam2" type="Button" parent="CanvasLayer/BttnsContainer"]
layout_mode = 0
offset_left = -25.0
offset_top = 2.0
offset_right = 29.0
offset_bottom = 33.0
text = "gaga2"

[node name="Cam3" type="Button" parent="CanvasLayer/BttnsContainer"]
layout_mode = 0
offset_left = -26.0
offset_top = -45.0
offset_right = 28.0
offset_bottom = -14.0
text = "gaga3"
